# esp-idf-lib

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
components/neil_ble_gatts/: CHANGELOG.md  CMakeLists.txt  README.md  component.mk  neil_ble_gatts.c  neil_ble_gatts.h  neil_ble_gatts_attr_db.c  neil_ble_gatts_attr_db.h  neil_ble_gatts_cfg.h  neil_ble_gatts_gap.c  neil_ble_gatts_gap.h  neil_ble_gatts_util.c  neil_ble_gatts_util.h
examples/ble_gatts/: CMakeLists.txt  sdkconfig.defaults
examples/ble_gatts/main/: CMakeLists.txt  neil_ble_gatts_example.c  neil_ble_gatts_example.h
main/: CMakeLists.txt  component.mk  main.c  naturalear_element.c  naturalear_element.h  naturalear_pipeline.c  vib_app.c  vib_audio.c  vib_audio.h  vib_audio_element.c  vib_audio_element.h  vib_audio_params.c  vib_audio_params.h  vib_audio_pipeline.c  vib_audio_pipeline.h  vib_behavior.c  vib_behavior.h  vib_ble_cfg.c  vib_ble_cfg.h  vib_ble_config.h  vib_ble_gap.c  vib_ble_gap.h  vib_ble_gatt_server.c  vib_ble_gatt_server.h  vib_ble_gatt_table.c  vib_ble_gatt_table.h  vib_ble_gatt_table_defs.h  vib_ble_util.c  vib_ble_util.h  vib_element.c  vib_element.h  vib_err.h  vib_memory.c  vib_memory.h
main/audio/: pipeline.c  pipeline.h  vib_audio_element.h
